manifests/base/networkpolicy-fare-engine-admin.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fare-engine-admin
  annotations:
    democloud.example/workload: fare-engine
    democloud.example/port: admin
    democloud.example/rule: rule-fare-engine-admin
spec:
  ingress:
    - from:
        - ipBlock:
            cidr: placeholder
